Programs link directly with Gnulib
Until now only Gnuastro's library would link with Gnulib. All the programs
would then access Gnulib through Gnuastro's library. This was fine on
GNU/Linux linkers. But as reported over one year ago by Alan Lefor (in bug
Mac OS systems (just found out now, thanks to Leindert Boogaard).

With this commit, each program will first link with Gnulib, then with
Gnuastro's library and initial tests with Leindert showed that it solved
the problem.

This bug was found and solved thanks to Alan Lefor and Leindert Boogaard.

This fixes bug #50957.

--- a/NEWS
+++ b/NEWS
@@ -195,6 +195,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 
 ** Bug fixes
 
+  bug #50957: --version output not possible on Mac OS X
   bug #52979: Many unused result warnings for asprintf in some compilers.
   bug #53122: Configure time CPPFLAGS and LDFLAGS don't pass to BuildProgram.
   bug #53142: Crash when printing values with the `--onlyversion' option.
